<resources>
    <string name="app_name">brandNewApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textview">TextView</string>
    <string name="welcome_to_login_page">Welcome to login page</string>
    <string name="email">Email:</string>
    <string name="email_address">Email address</string>
    <string name="password">Password:</string>
    <string name="password_login">Password</string>
    <string name="login">Login</string>
    <string name="register_to_the_app">Register to the app</string>
    <string name="email_title">Email:</string>
    <string name="email_address_title">Email address</string>
    <string name="password_title">Password:</string>
    <string name="enter_password_title">Enter password</string>
    <string name="password_validation_title">Password validation:</string>
    <string name="and_again_title">And again..</string>
    <string name="phone_number_title">Phone Number:</string>
    <string name="full_name_title">Full name:</string>
    <string name="register_title">Register</string>

</resources>