<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:background="#2A2625"

    >

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2D2D2D"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/welcome_to_login_page"
        android:text="Login to App"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2D2D2D"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_horizontal|center_vertical"
        android:minHeight="48dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/emailLoginTb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4sp"
        android:layout_marginRight="4sp"
        android:layout_marginBottom="4sp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittextstyle"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#FFFFFFFF"
        android:textColorHint="@color/gray" />

    <TextView
        android:id="@+id/passTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/tbxLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4sp"
        android:layout_marginRight="4sp"
        android:layout_marginBottom="4sp"
        android:autofillHints="password"
        android:background="@drawable/edittextstyle"
        android:ems="10"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text=""
        android:textColor="#FFFFFFFF"
        android:textColorHint="@color/gray" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:theme="@style/ShapeAppearanceOverlay.Material3.Button" />

</LinearLayout>