<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A2625">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/RegisterText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/register_to_the_app"
            android:textColor="#DEDEDE"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal|center_vertical"

            android:text="@string/email_title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/emailRegisterTb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="4sp"
            android:layout_marginRight="4sp"
            android:layout_marginBottom="4sp"
            android:layout_weight="0.8"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/email_address_title"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/white"


            android:textColorHint="@color/gray"
            android:textSize="24sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/passTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/password_title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tbRegisterPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="4sp"
            android:layout_marginRight="4sp"
            android:layout_marginBottom="4sp"
            android:layout_weight="1"
            android:autofillHints="password"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/enter_password_title"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text=""
            android:textColorHint="@color/gray"
            android:textSize="24sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/passValidation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/password_validation_title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tbPasswordValidation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="4sp"
            android:layout_marginRight="4sp"
            android:layout_marginBottom="4sp"
            android:layout_weight="1"
            android:autofillHints="password"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/and_again_title"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text=""
            android:textColorHint="@color/gray"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/phoneTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/phone_number_title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/phoneTb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="4sp"
            android:layout_marginRight="4sp"
            android:layout_marginBottom="4sp"
            android:layout_weight="1"
            android:autofillHints="phone"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/phone_number_title"
            android:inputType="phone"
            android:minHeight="48dp"
            android:text=""
            android:textColorHint="@color/gray"
            android:textSize="24sp"
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/full_name_title"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/nameTb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="4sp"
            android:layout_marginRight="4sp"
            android:layout_marginBottom="4sp"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/full_name_title"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textColorHint="@color/gray"
            android:textSize="24sp"
            tools:ignore="TouchTargetSizeCheck" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/buttonstyle"
            android:theme="@style/ShapeAppearanceOverlay.Material3.Button" />

    </LinearLayout>




    </ScrollView>
</LinearLayout>